@@ -1,3 +1,7 @@
+2011-03-08  Dodji Seketeli  <dodji@redhat.com>
+
+	* g++.dg/lookup/template3.C: New test.
+
 2011-03-08  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
